--- a/index.html
+++ b/index.html
@@ -115,5 +115,7 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="./static/js/jquery-1.11.3.js"></script>
+    <script src="./static/js/jquery.table2excel.min.js"></script>
   </body>
 </html>
